--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="ads-elem">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="ad poster">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="centered-main-page-elem">
@@ -27,7 +27,7 @@
             <input type="text">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="delete icon">
             </button>
           </li>
           <li class="edit-mode">
@@ -36,7 +36,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
