--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="centered-main-page-elem">
       <section id="top-section-for-adding-element-to-list">
-        <h3 for="new-task">Add Item</h3>
+        <h3 class="new-task">Add Item</h3>
         <article class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
